# erchong_tool

./: .gitignore  NAMING_CONVENTIONS.md  PROJECT_STRUCTURE.md  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  t.py
pages/: gallery_card.py  home.py
resource/: config_params.json
resource/qss/dark/: annotation_widget.qss  defualt.qss  feature_capture_widget.qss  home_widget.qss  hwnd_list_widget.qss  image_card_widget.qss
resource/qss/light/: annotation_widget.qss  defualt.qss  feature_capture_widget.qss  home_widget.qss  hwnd_list_widget.qss  image_card_widget.qss
src/erchong/: __init__.py  app.py
src/erchong/common/: config.py  style_sheet.py
src/erchong/config/: __init__.py  settings.py
src/erchong/utils/: __init__.py  logger.py  platform.py
src/erchong/widgets/: __init__.py  annotation_widget.py  feature_capture_widget.py  gallery_card_widget.py  home_widget.py  hwnd_list_widget.py  image_card_widget.py  settings_widget.py
src/erchong/windows/: __init__.py  main_window.py
